--- a/Sicsoft.Checkin.Web/Pages/Bodega/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Bodega/Observar.cshtml
@@ -43,6 +43,8 @@
         function onGuardar() {
             btn.disabled = true;
             $("#formTipos").submit();
+            btn.disabled = false;
+
         }
     </script>
 
