--- a/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Llamadas/Editar.cshtml
@@ -25,6 +25,8 @@
         function onGuardar() {
             btn.disabled = true;
             $("#formTipos").submit();
+
+            btn.disabled = false;
         }
     </script>
 
