--- a/Sicsoft.Checkin.Web/Pages/Reparacion/Observar.cshtml
+++ b/Sicsoft.Checkin.Web/Pages/Reparacion/Observar.cshtml
@@ -278,31 +278,36 @@
                     <table class="table table-striped table-bordered first">
                         <thead>
                             <tr>
+                                <th>Cod. Item</th>
                                 <th>Item</th>
+
                                 <th>Cantidad Utilizada</th>
-                                <th>Diagnóstico</th>
+                                @*<th>Diagnóstico</th>*@
 
 
 
                             </tr>
                         </thead>
                         <tbody>
-                            @foreach (var item in Model.Encabezado.Detalle)
+                            @foreach (var item in Model.Control)
                             {
-                                <tr>
-                                    <td>@item.ItemCode</td>
-                                    <td>@item.Cantidad</td>
-                                    <td>@(Model.Errores.Where(a => a.id == item.idError).FirstOrDefault() == null ? "Sin Diagnostico": Model.Errores.Where(a => a.id == item.idError).FirstOrDefault().Descripcion  )</td>
-                                </tr>
+                            <tr>
+                                <td>@item.Item </td>
+                                <td>@item.ItemName </td>
+
+                                <td>@item.CantidadUsado</td>
+                                @*<td>@(Model.Errores.Where(a => a.id == Model.Encabezado.Detalle.Where(b => b.idProducto == item.idProducto).FirstOrDefault().idError).FirstOrDefault() == null ? "Sin Diagnostico": Model.Errores.Where(a => a.id == Model.Encabezado.Detalle.Where(b => b.idProducto == item.idProducto).FirstOrDefault().idError).FirstOrDefault().Descripcion  )</td>*@
+                            </tr>
                             }
 
 
                         </tbody>
                         <tfoot>
                             <tr>
+                                <th>Cod. Item</th>
                                 <th>Item</th>
+
                                 <th>Cantidad Utilizada</th>
-                                <th>Diagnóstico</th>
 
                             </tr>
                         </tfoot>
